--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;trustServerCertificate=true
 spring.datasource.username= sa
 spring.datasource.password= root
-#spring.jpa.hibernate.ddl-auto= update
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.hibernate.ddl-auto= create-drop
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 
-
+spring.security.user.name = user
+spring.security.user.password= = 123
+spring.security.user.roles = USERS
+spring.mvc.async.request-timeout=5000
 ##Para altenticacao do windows
 #spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;encrypt=false;integratedSecurity=true
