terminado a base da segurança, falta alguns testes e ajustes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Diale
 
 spring.security.user.name = user
 spring.security.user.password= = 123
-spring.security.user.roles = USERS
+spring.security.user.roles = ROLE_ADMIN
 spring.mvc.async.request-timeout=5000
+
 ##Para altenticacao do windows
 #spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;encrypt=false;integratedSecurity=true
