melhoramentos em empresa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,8 @@ spring.security.user.password= = 123
 spring.security.user.roles = ROLE_ADMIN
 spring.mvc.async.request-timeout=5000
 
+server.port=8080
+server.address=10.30.12.123
+
 ##Para altenticacao do windows
 #spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;encrypt=false;integratedSecurity=true
