ajustes nas paginas, adicionado favicon, ajustes nos diretorios  projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,21 @@
-spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;trustServerCertificate=true
+#spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;trustServerCertificate=true
+spring.datasource.url= jdbc:sqlserver://localhost:1433;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
 spring.datasource.username= sa
-spring.datasource.password= root
+spring.datasource.password= 15092003D@yon
+#spring.datasource.password= root
+jdbc.dialect=org.hibernate.dialect.SQLServerDialect
+jdbc.encrypt=false
 spring.jpa.hibernate.ddl-auto= update
 #spring.jpa.hibernate.ddl-auto= create-drop
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+
 
 spring.security.user.name = user
 spring.security.user.password= = 123
 spring.security.user.roles = ROLE_ADMIN
 spring.mvc.async.request-timeout=5000
 
-server.port=8080
-
+spring.mvc.favicon.enabled=true
 ##Para altenticacao do windows
 #spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;encrypt=false;integratedSecurity=true
