--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;trustServerCertificate=true
 spring.datasource.url= jdbc:sqlserver://localhost:1433;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
 spring.datasource.username= sa
-#spring.datasource.password= 15092003D@yon
-spring.datasource.password= root
+spring.datasource.password= 15092003D@yon
+#spring.datasource.password= root
 jdbc.dialect=org.hibernate.dialect.SQLServerDialect
 jdbc.encrypt=false
 spring.jpa.hibernate.ddl-auto= update
