--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-#spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;trustServerCertificate=true
+spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;trustServerCertificate=true
 #spring.datasource.url= jdbc:sqlserver://127.0.0.1:1400;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
-spring.datasource.url= jdbc:sqlserver://127.0.0.1:1433;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
+#spring.datasource.url= jdbc:sqlserver://127.0.0.1:1433;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
 spring.datasource.username= sa
-spring.datasource.password= sa
+#spring.datasource.password= sa
 #spring.datasource.password= SenhaF0rt&
-#spring.datasource.password= root
-jdbc.dialect=org.hibernate.dialect.SQLServerDialect
-jdbc.encrypt=false
+spring.datasource.password= root
 spring.jpa.hibernate.ddl-auto= update
 #spring.jpa.hibernate.ddl-auto= create-drop
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
