--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;trustServerCertificate=true
 #spring.datasource.url= jdbc:sqlserver://192.168.1.102:1400;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
 spring.datasource.url= jdbc:sqlserver://127.0.0.1:1433;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
+#spring.datasource.url= jdbc:sqlserver://sql-server-db:1433;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
 spring.datasource.username= sa
 spring.datasource.password= sa
 #spring.datasource.password= SenhaF0rt&
