--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-#spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;trustServerCertificate=true
+spring.datasource.url= jdbc:sqlserver://localhost;databaseName=EveryWhereSystems_DB;trustServerCertificate=true
 #spring.datasource.url= jdbc:sqlserver://192.168.1.102:1400;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
-spring.datasource.url= jdbc:sqlserver://host.docker.internal:1433;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
+#spring.datasource.url= jdbc:sqlserver://host.docker.internal:1433;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
 #spring.datasource.url= jdbc:sqlserver://sql-server-db:1433;DatabaseName=EveryWhereSystems_DB;trustServerCertificate=true
 spring.datasource.username= sa
-spring.datasource.password= sa
+#spring.datasource.password= sa
 #spring.datasource.password= SenhaF0rt&
-#spring.datasource.password= root
+spring.datasource.password= root
 spring.jpa.hibernate.ddl-auto= update
 #spring.jpa.hibernate.ddl-auto= create-drop
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
